# swim-java-bindings

./: .gitignore  .gitmodules  LICENSE  README.md  azure-pipelines.yml
.azure/: install-rust.yml  lint-java.yml  lint-rust.yml  test-java.yml  test-rust.yml
ci/: azure-install-rust.yml  (+4 more)
rust-java-bridge/: Cargo.toml
rust-java-bridge/.cargo/: config
rust-java-bridge/bytebridge/: README.md
rust-java-bridge/bytebridge/bytebridge/: Cargo.toml
rust-java-bridge/bytebridge/bytebridge/src/: impls.rs  lib.rs  models.rs  tests.rs
rust-java-bridge/bytebridge/bytebridge/src/impls/: mod.rs  tests.rs
rust-java-bridge/bytebridge/bytebridge/tests/: derivation.rs
rust-java-bridge/bytebridge/bytebridge_derive/: Cargo.toml
rust-java-bridge/bytebridge/bytebridge_derive/internals/: Cargo.toml
rust-java-bridge/bytebridge/bytebridge_derive/internals/src/: lib.rs
rust-java-bridge/bytebridge/bytebridge_derive/src/: error.rs  lib.rs
rust-java-bridge/bytebridge/bytebridge_derive/src/bindings/: mod.rs
rust-java-bridge/bytebridge/bytebridge_derive/src/bindings/java/: mod.rs  writer.rs
rust-java-bridge/bytebridge/bytebridge_derive_java/: Cargo.toml
rust-java-bridge/bytebridge/bytebridge_derive_java/src/: docs.rs  error.rs  lib.rs
rust-java-bridge/bytebridge/bytebridge_derive_java/src/bindings/: mod.rs
rust-java-bridge/bytebridge/bytebridge_derive_java/src/bindings/java/: mod.rs  models.rs  writer.rs
rust-java-bridge/bytebridge/bytebridge_derive_java/src/bindings/rust/: mod.rs  writer.rs
rust-java-bridge/bytebridge/bytebridge_derive_java/tests/: tests.rs
rust-java-bridge/bytebridge/bytebridge_derive_java/tests/abstract/inputs/: rename.rs  simple.rs
rust-java-bridge/bytebridge/bytebridge_derive_java/tests/abstract/outputs/rename/: SubclassA.java  SubclassB.java  Superclass.java
rust-java-bridge/bytebridge/bytebridge_derive_java/tests/abstract/outputs/simple/: Test.java  TestAVar.java  TestBVar.java
rust-java-bridge/bytebridge/bytebridge_derive_java/tests/concrete/inputs/: complex.rs  constraint_natural.rs  constraint_nonzero.rs  constraint_nonzero_range.rs  constraint_range.rs  constraint_unsigned_array.rs  duration.rs  rename.rs  simple_struct.rs  unsigned_u32.rs  unsigned_u64.rs  unsigned_u8.rs  vector.rs
rust-java-bridge/bytebridge/bytebridge_derive_java/tests/concrete/outputs/: complex.java  constraint_natural.java  constraint_nonzero.java  constraint_nonzero_range.java  constraint_range.java  constraint_unsigned_array.java  duration.java  rename.java  simple_struct.java  unsigned_u32.java  unsigned_u64.java  unsigned_u8.java  vector.java
rust-java-bridge/bytebridge/test/simple/: Cargo.toml  build.rs
rust-java-bridge/bytebridge/test/simple/src/: lib.rs  models.rs
rust-java-bridge/core-ffi/: Cargo.toml
rust-java-bridge/core-ffi/src/: java.rs  lib.rs
rust-java-bridge/core-ffi/src/io/: mod.rs
rust-java-bridge/core-ffi/src/io/ffi_byte_channel/: mod.rs
rust-java-bridge/core-ffi/src/io/ffi_byte_channel/jreader_rwriter/: mod.rs
rust-java-bridge/core-ffi/src/io/ffi_byte_channel/jwriter_rreader/: mod.rs
rust-java-bridge/core-ffi/src/runtime/: init.rs  mod.rs
rust-java-bridge/core-ffi/src/sync/: atomic_bool.rs  atomic_long.rs  mod.rs
rust-java-bridge/jvm_sys/: Cargo.toml
rust-java-bridge/jvm_sys/jvm_sys_tests/: Cargo.toml
rust-java-bridge/jvm_sys/jvm_sys_tests/src/: lib.rs
rust-java-bridge/jvm_sys/src/: bridge.rs  env.rs  lib.rs  macros.rs  method.rs  util.rs  vtable.rs
rust-java-bridge/jvm_sys/src/bytes/: mod.rs  tests.rs
rust-java-bridge/jvm_sys/src/channel/: b2.rs  mod.rs
rust-java-bridge/jvm_sys/src/channel/reader/: mod.rs
rust-java-bridge/jvm_sys/src/channel/writer/: mod.rs
rust-java-bridge/jvm_sys/src/vm/: exception.rs  method.rs  mod.rs  utils.rs
rust-java-bridge/resource_api/api/: Cargo.toml
rust-java-bridge/resource_api/ffi_common/: Cargo.toml
rust-java-bridge/resource_api/ffi_common/src/: lib.rs
rust-java-bridge/src/: lib.rs
rust-java-bridge/swim_client/: Cargo.toml  build.rs
rust-java-bridge/swim_client/src/: ffi_models.rs  lib.rs  t.rs
rust-java-bridge/swim_client/swim_client_core/: ArrayType.java  Cargo.toml  build.rs
rust-java-bridge/swim_client/swim_client_core/ai/swim/: ArrayType.java  Test.java
rust-java-bridge/swim_client/swim_client_core/src/: ffi_models.rs  lib.rs  macros.rs
rust-java-bridge/swim_client/swim_client_core/src/downlink/: decoder.rs  mod.rs  vtable.rs
rust-java-bridge/swim_client/swim_client_core/src/downlink/map/: lifecycle.rs  mod.rs
rust-java-bridge/swim_client/swim_client_core/src/downlink/value/: lifecycle.rs  mod.rs  vtable.rs
rust-java-bridge/swim_client/swim_client_test/: Cargo.toml
rust-java-bridge/swim_client/swim_client_test/src/: fixture.rs  lib.rs  map.rs  value.rs
rust-java-bridge/swim_server/: Cargo.toml
rust-java-bridge/swim_server/core/swim_server_core/: Cargo.toml
rust-java-bridge/swim_server/core/swim_server_core/src/: agent.rs  lib.rs  t.rs
rust-java-bridge/swim_server/core/swim_server_test/: Cargo.toml
rust-java-bridge/swim_server/core/swim_server_test/src/: mock.rs
rust-java-bridge/swim_server/fixture/: Cargo.toml
rust-java-bridge/swim_server/fixture/src/: lib.rs
rust-java-bridge/swim_server/src/: lib.rs
rust-java-bridge/swim_server/swim_server_core/: Cargo.toml
rust-java-bridge/swim_server/swim_server_core/src/: agent.rs  codec.rs  java_context.rs  lib.rs  macros.rs  spec.rs
rust-java-bridge/swim_server/swim_server_core/src/agent/: context.rs  foreign.rs  mod.rs  tests.rs
rust-java-bridge/swim_server/swim_server_test/: Cargo.toml
rust-java-bridge/swim_server/swim_server_test/src/: agent.rs  lib.rs  mock.rs
rust-java-bridge/swim_server/task_scheduler/: Cargo.toml
rust-java-bridge/swim_server/task_scheduler/src/: lib.rs  tests.rs
rust-java-bridge/swim_sys/: Cargo.toml
rust-java-bridge/swim_sys/src/: lib.rs
rust-java-bridge/sys_util/: Cargo.toml
rust-java-bridge/sys_util/src/: lib.rs
rust-java-bridge/utilities/interval_stream/: Cargo.toml
rust-java-bridge/utilities/interval_stream/src/: lib.rs  tests.rs
(+1452 files in other folders)
