[workspace]
members = [
    "bytebridge/bytebridge",
    "bytebridge/bytebridge_derive",
    "bytebridge/bytebridge_derive/internals",
    "bytebridge/bytebridge_derive_java",
    "bytebridge/test/*",
    "jvm_sys",
    "jvm_sys/jvm_sys_tests",
    "swim_client",
    "swim_client/swim_client_core",
    "swim_client/swim_client_test",
    "swim_server",
    "swim_server/swim_server_core",
    "swim_server/swim_server_test",
]

[workspace.dependencies]
bytebridge = { path = "bytebridge/bytebridge" }
jvm_sys = { path = "jvm_sys" }
jni = "0.20.0"
tokio = "1.1.1"
tokio-util = "0.7.4"
bytes = "1.0"
futures = "0.3.4"
futures-util = "0.3.4"
url = "2.1.1"
thiserror = "1.0"
parking_lot = "0.12.1"
proc-macro2 = "1.0"
syn = "2.0.10"
quote = "1.0.3"
paste = "1.0.11"
heck = "0.4.1"
lazy_static = "1.4.0"
ratchet_deflate = { version = "0.4.0", path = "../../ratchet/ratchet_deflate"}
byteorder = "1.4"
rmp = "0.8"
tracing = "0.1"
tracing-subscriber = "0.2.11"
tracing-futures = "0.2"
rand = "0.8.5"
uuid = "1.2"

[workspace.dependencies.ratchet]
package = "ratchet_rs"
version = "0.4.0"
path = "../../ratchet/ratchet_rs"