[workspace]
members = [
    "jvm_sys",
    "jvm_sys/jvm_sys_tests",
    "swim_client",
    "swim_client/swim_client_core",
    "swim_client/swim_client_test",
    "bytebridge/bytebridge",
    "bytebridge/bytebridge_derive",
    "bytebridge/bytebridge_derive/internals",
    "bytebridge/bytebridge_derive_java",
    "bytebridge/test/*"
]

[workspace.dependencies]
jni = "0.20.0"
tokio = "1.1.1"
tokio-util = "0.7.4"
bytes = "1.0"
futures = "0.3.4"
futures-util = "0.3.4"
url = "2.1.1"
thiserror = "1.0"
parking_lot = "0.12"
proc-macro2 = "1.0"
syn = "2.0.10"
quote = "1.0.3"
paste = "1.0.11"
heck = "0.4.1"
lazy_static = "1.4.0"
ratchet_deflate = "0.4"
byteorder = "1.4"
rmp = "0.8"

[workspace.dependencies.ratchet]
package = "ratchet_rs"
version = "0.4"
