[package]
name = "jvm_sys"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
bytes = { workspace = true }
paste = { workspace = true }
bytebridge =  { workspace = true }
parking_lot = { workspace = true, features = ["send_guard"] }
static_assertions = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
