[package]
name = "bytebridge"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[features]
default = []
derive = ["bytebridge_derive"]

[dependencies]
bytebridge_derive = { path = "../bytebridge_derive", optional = true }
bytes = { workspace = true }
bincode = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
[dev-dependencies]
paste = "1.0.11"
