[package]
name = "bytebridge"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[features]
default = []
derive_java = ["bytebridge_derive_java"]

[dependencies]
bytebridge_derive_java = { path = "../bytebridge_derive_java", optional = true }
bytebridge_derive = { path = "../bytebridge_derive" }
bytes = { workspace = true }

[dev-dependencies]
paste = { workspace = true }