[package]
name = "bytebridge_derive_java"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[dependencies]
derive_internals = { path = "../bytebridge_derive/internals" }
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = { workspace = true }
thiserror = { workspace = true }
swim_utilities = { path = "../../../swim-rust/swim_utilities", features = ["errors"] }
heck = { workspace = true }
lazy_static = { workspace = true }
