[package]
name = "jvm_sys_tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jvm_sys = { path = "../../jvm_sys" }
sys_util = { path = "../../sys_util" }
jni = "0.19.0"
tokio = { version = "1.1.1", features = ["rt-multi-thread", "io-util"] }
bytes = "1.1.0"
futures = "0.3.4"
futures-util = "0.3.4"